[Feature][blog] Add structured tags and clean up stale ja docs translations

--- a/blog/2023/07-22.md
+++ b/blog/2023/07-22.md
@@ -2,7 +2,7 @@
 slug: hex-school-node
 title: 'HexSchool Node.js Enterprise Course'
 authors: wuzhe0912
-tags: [Node.js]
+tags: [engineering]
 ---
 
 Some rough thoughts and reflections after completing the HexSchool Node.js Enterprise Course.
