--- a/blog/2024/08-11.md
+++ b/blog/2024/08-11.md
@@ -2,7 +2,7 @@
 slug: mid-year-reflection-2024
 title: '2024 Mid-Year Reflection'
 authors: wuzhe0912
-tags: [Personal Growth]
+tags: [career, life]
 ---
 
 Time really flies faster than you'd expect. Half of 2024 is already gone, but I don't feel like my self-discipline has improved much. There's not a lot to show for it, but I'll jot down some notes anyway.
