--- a/blog/2024/12-31.md
+++ b/blog/2024/12-31.md
@@ -2,7 +2,7 @@
 slug: 2024-year-end-summary
 title: '40 Questions to Ask Myself at the End of 2024'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 A year-end summary for 2024. Continuing last year's format, reflecting on the year by asking myself questions once again.
