--- a/i18n/de/docusaurus-plugin-content-blog/2023/07-22.md
+++ b/i18n/de/docusaurus-plugin-content-blog/2023/07-22.md
@@ -2,7 +2,7 @@
 slug: hex-school-node
 title: 'HexSchool Node.js Unternehmenskurs'
 authors: wuzhe0912
-tags: [Node.js]
+tags: [engineering]
 ---
 
 Ein paar grobe Gedanken und Reflexionen nach Abschluss des HexSchool Node.js Unternehmenskurses.
