--- a/i18n/de/docusaurus-plugin-content-blog/2023/12-31.md
+++ b/i18n/de/docusaurus-plugin-content-blog/2023/12-31.md
@@ -2,7 +2,7 @@
 slug: 2023-year-end-summary
 title: '40 Fragen an mich selbst zum Jahresende 2023'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 Jahresrueckblick 2023 — durch Fragen an mich selbst reflektiere ich, wie mein Jahr gelaufen ist.
