--- a/i18n/de/docusaurus-plugin-content-blog/2024/08-11.md
+++ b/i18n/de/docusaurus-plugin-content-blog/2024/08-11.md
@@ -2,7 +2,7 @@
 slug: mid-year-reflection-2024
 title: 'Halbjahresrueckblick 2024'
 authors: wuzhe0912
-tags: [Personal Growth]
+tags: [career, life]
 ---
 
 Die Zeit vergeht wirklich schneller als man denkt. Schwupps ist die Haelfte von 2024 vorbei, aber ich habe das Gefuehl, dass meine Selbstdisziplin sich nicht verbessert hat. Erreicht habe ich wenig Nennenswertes, aber ein paar Zeilen dazu schreibe ich trotzdem.
