--- a/i18n/de/docusaurus-plugin-content-blog/2024/12-31.md
+++ b/i18n/de/docusaurus-plugin-content-blog/2024/12-31.md
@@ -2,7 +2,7 @@
 slug: 2024-year-end-summary
 title: '40 Fragen an mich selbst zum Jahresende 2024'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 Jahresrueckblick 2024 — im gleichen Format wie letztes Jahr stelle ich mir erneut 40 Fragen, um ueber mein Jahr zu reflektieren.
