--- a/i18n/es/docusaurus-plugin-content-blog/2023/07-22.md
+++ b/i18n/es/docusaurus-plugin-content-blog/2023/07-22.md
@@ -2,7 +2,7 @@
 slug: hex-school-node
 title: 'Curso empresarial de Node.js en HexSchool'
 authors: wuzhe0912
-tags: [Node.js]
+tags: [engineering]
 ---
 
 Algunas reflexiones y pensamientos después de completar el curso empresarial de Node.js en HexSchool (un bootcamp de programación en Taiwán).
