--- a/i18n/es/docusaurus-plugin-content-blog/2024/08-11.md
+++ b/i18n/es/docusaurus-plugin-content-blog/2024/08-11.md
@@ -2,7 +2,7 @@
 slug: mid-year-reflection-2024
 title: 'Reflexión de mitad de año 2024'
 authors: wuzhe0912
-tags: [Personal Growth]
+tags: [career, life]
 ---
 
 El tiempo pasa a una velocidad que supera la imaginación. En un abrir y cerrar de ojos, 2024 ya va por la mitad. Siento que mi autodisciplina no ha mejorado y no tengo mucho que presumir en cuanto a logros, pero igual hago un breve recuento.
