--- a/i18n/es/docusaurus-plugin-content-blog/2024/12-31.md
+++ b/i18n/es/docusaurus-plugin-content-blog/2024/12-31.md
@@ -2,7 +2,7 @@
 slug: 2024-year-end-summary
 title: '40 preguntas que me hice al final de 2024'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 Resumen de fin de año 2024. Siguiendo el formato del año pasado, vuelvo a reflexionar sobre mi crecimiento a través de estas preguntas.
