--- a/i18n/fr/docusaurus-plugin-content-blog/2023/07-22.md
+++ b/i18n/fr/docusaurus-plugin-content-blog/2023/07-22.md
@@ -2,7 +2,7 @@
 slug: hex-school-node
 title: 'Formation entreprise Node.js chez HexSchool'
 authors: wuzhe0912
-tags: [Node.js]
+tags: [engineering]
 ---
 
 Quelques reflexions et pensees apres avoir termine la formation entreprise Node.js de HexSchool.
