--- a/i18n/fr/docusaurus-plugin-content-blog/2023/12-31.md
+++ b/i18n/fr/docusaurus-plugin-content-blog/2023/12-31.md
@@ -2,7 +2,7 @@
 slug: 2023-year-end-summary
 title: '40 questions a moi-meme pour la fin 2023'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 Bilan de fin d'annee 2023 — en me posant des questions pour reflechir a ma progression.
