--- a/i18n/fr/docusaurus-plugin-content-blog/2024/08-11.md
+++ b/i18n/fr/docusaurus-plugin-content-blog/2024/08-11.md
@@ -2,7 +2,7 @@
 slug: mid-year-reflection-2024
 title: 'Reflexion mi-2024'
 authors: wuzhe0912
-tags: [Personal Growth]
+tags: [career, life]
 ---
 
 Le temps passe vraiment plus vite qu'on ne l'imagine. En un clin d'oeil, la moitie de 2024 est deja passee, mais j'ai l'impression que ma discipline personnelle ne s'est pas amelioree. Peu de choses accomplies meritent d'etre mentionnees, mais je prends quand meme quelques lignes pour en parler.
