--- a/i18n/fr/docusaurus-plugin-content-blog/2024/12-31.md
+++ b/i18n/fr/docusaurus-plugin-content-blog/2024/12-31.md
@@ -2,7 +2,7 @@
 slug: 2024-year-end-summary
 title: '40 questions a moi-meme pour la fin 2024'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 Bilan de fin d'annee 2024 — dans le meme format que l'an dernier, je me pose a nouveau 40 questions pour reflechir a cette annee.
