--- a/i18n/ja/docusaurus-plugin-content-blog/2023/07-22.md
+++ b/i18n/ja/docusaurus-plugin-content-blog/2023/07-22.md
@@ -2,7 +2,7 @@
 slug: hex-school-node
 title: 'HexSchool Node.js 企業専門クラス'
 authors: wuzhe0912
-tags: [Node.js]
+tags: [engineering]
 ---
 
 HexSchool（台湾のコーディングブートキャンプ）の Node.js 企業専門クラスを修了して、いくつか思ったことや振り返りを書いてみる。
