--- a/i18n/ja/docusaurus-plugin-content-blog/2023/12-31.md
+++ b/i18n/ja/docusaurus-plugin-content-blog/2023/12-31.md
@@ -2,7 +2,7 @@
 slug: 2023-year-end-summary
 title: '2023年の年末に自分に問いかけた40の質問'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 2023年の年末総括。自分自身に問いかけることで、この一年の成長を振り返ってみる。
