--- a/i18n/ja/docusaurus-plugin-content-blog/2024/08-11.md
+++ b/i18n/ja/docusaurus-plugin-content-blog/2024/08-11.md
@@ -2,7 +2,7 @@
 slug: mid-year-reflection-2024
 title: '2024年 中間振り返り'
 authors: wuzhe0912
-tags: [Personal Growth]
+tags: [career, life]
 ---
 
 時間が過ぎるスピードは本当に想像以上で、気がつけば2024年ももう半分が終わっていた。でも自己管理の度合いは全然改善されていないし、達成できたことも大して語れるものがない。それでも一応書き留めておく。
