--- a/i18n/ko/docusaurus-plugin-content-blog/2023/07-22.md
+++ b/i18n/ko/docusaurus-plugin-content-blog/2023/07-22.md
@@ -2,7 +2,7 @@
 slug: hex-school-node
 title: 'HexSchool Node.js 기업 전문반'
 authors: wuzhe0912
-tags: [Node.js]
+tags: [engineering]
 ---
 
 HexSchool Node.js 기업 전문반을 수료한 후, 몇 가지 소소한 생각과 반성을 정리해봤다.
