--- a/i18n/ko/docusaurus-plugin-content-blog/2024/08-11.md
+++ b/i18n/ko/docusaurus-plugin-content-blog/2024/08-11.md
@@ -2,7 +2,7 @@
 slug: mid-year-reflection-2024
 title: '2024 상반기 회고'
 authors: wuzhe0912
-tags: [Personal Growth]
+tags: [career, life]
 ---
 
 시간이 흐르는 속도가 정말 상상 이상이다. 어느새 2024년도 절반이 지났는데, 개인적으로 자기 관리가 나아진 느낌은 없고, 이룬 것도 별로 없다. 그래도 간단히 적어본다.
