--- a/i18n/ko/docusaurus-plugin-content-blog/2024/12-31.md
+++ b/i18n/ko/docusaurus-plugin-content-blog/2024/12-31.md
@@ -2,7 +2,7 @@
 slug: 2024-year-end-summary
 title: '2024 연말, 나에게 던진 40가지 질문'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 2024 연말 정리. 작년 형식을 이어서 다시 스스로에게 질문을 던지며 한 해의 성장을 되돌아본다.
