--- a/i18n/pt-BR/docusaurus-plugin-content-blog/2023/07-22.md
+++ b/i18n/pt-BR/docusaurus-plugin-content-blog/2023/07-22.md
@@ -2,7 +2,7 @@
 slug: hex-school-node
 title: 'Curso empresarial de Node.js na HexSchool'
 authors: wuzhe0912
-tags: [Node.js]
+tags: [engineering]
 ---
 
 Algumas reflexões e pensamentos após concluir o curso empresarial de Node.js na HexSchool (um bootcamp de programação em Taiwan).
