--- a/i18n/pt-BR/docusaurus-plugin-content-blog/2023/12-31.md
+++ b/i18n/pt-BR/docusaurus-plugin-content-blog/2023/12-31.md
@@ -2,7 +2,7 @@
 slug: 2023-year-end-summary
 title: '40 perguntas que me fiz no final de 2023'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 Resumo de fim de ano 2023. Refletindo sobre meu crescimento através de perguntas que faço a mim mesmo.
