--- a/i18n/pt-BR/docusaurus-plugin-content-blog/2024/08-11.md
+++ b/i18n/pt-BR/docusaurus-plugin-content-blog/2024/08-11.md
@@ -2,7 +2,7 @@
 slug: mid-year-reflection-2024
 title: 'Reflexão de meio de ano 2024'
 authors: wuzhe0912
-tags: [Personal Growth]
+tags: [career, life]
 ---
 
 O tempo passa numa velocidade que supera a imaginação. Num piscar de olhos, 2024 já foi pela metade. Sinto que minha autodisciplina não melhorou e não tenho muito do que me orgulhar em termos de conquistas, mas ainda assim faço um breve balanço.
