--- a/i18n/pt-BR/docusaurus-plugin-content-blog/2024/12-31.md
+++ b/i18n/pt-BR/docusaurus-plugin-content-blog/2024/12-31.md
@@ -2,7 +2,7 @@
 slug: 2024-year-end-summary
 title: '40 perguntas que me fiz no final de 2024'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 Resumo de fim de ano 2024. Seguindo o formato do ano passado, volto a refletir sobre meu crescimento através destas perguntas.
