--- a/i18n/vi/docusaurus-plugin-content-blog/2023/07-22.md
+++ b/i18n/vi/docusaurus-plugin-content-blog/2023/07-22.md
@@ -2,7 +2,7 @@
 slug: hex-school-node
 title: 'Khoa hoc Node.js doanh nghiep cua HexSchool'
 authors: wuzhe0912
-tags: [Node.js]
+tags: [engineering]
 ---
 
 Mot vai suy nghi va nhin lai sau khi hoan thanh khoa hoc Node.js doanh nghiep cua HexSchool.
