--- a/i18n/vi/docusaurus-plugin-content-blog/2023/12-31.md
+++ b/i18n/vi/docusaurus-plugin-content-blog/2023/12-31.md
@@ -2,7 +2,7 @@
 slug: 2023-year-end-summary
 title: '40 cau hoi tu hoi ban than cuoi nam 2023'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 Tong ket cuoi nam 2023 — tu dat cau hoi cho ban than de nhin lai su truong thanh trong nam.
