--- a/i18n/vi/docusaurus-plugin-content-blog/2024/08-11.md
+++ b/i18n/vi/docusaurus-plugin-content-blog/2024/08-11.md
@@ -2,7 +2,7 @@
 slug: mid-year-reflection-2024
 title: 'Nhin lai giua nam 2024'
 authors: wuzhe0912
-tags: [Personal Growth]
+tags: [career, life]
 ---
 
 Thoi gian troi qua nhanh that su vuot ngoai tuong tuong. Thoang cai da het nua nam 2024, nhung ca nhan cam thay muc do tu ky luat khong cai thien. Nhung gi dat duoc cung chang co gi dang noi, nhung van viet vai dong ghi lai.
