--- a/i18n/vi/docusaurus-plugin-content-blog/2024/12-31.md
+++ b/i18n/vi/docusaurus-plugin-content-blog/2024/12-31.md
@@ -2,7 +2,7 @@
 slug: 2024-year-end-summary
 title: '40 cau hoi tu hoi ban than cuoi nam 2024'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 Tong ket cuoi nam 2024 — tiep tuc dinh dang nam ngoai, mot lan nua tu dat cau hoi cho ban than de nhin lai su truong thanh trong nam.
