--- a/i18n/zh-cn/docusaurus-plugin-content-blog/2023/07-22.md
+++ b/i18n/zh-cn/docusaurus-plugin-content-blog/2023/07-22.md
@@ -2,7 +2,7 @@
 slug: hex-school-node
 title: 'HexSchool Node.js 企业专班'
 authors: wuzhe0912
-tags: [Node.js]
+tags: [engineering]
 ---
 
 完成 HexSchool Node.js 企业专班后，一些粗浅的想法与反思。
