--- a/i18n/zh-cn/docusaurus-plugin-content-blog/2023/12-31.md
+++ b/i18n/zh-cn/docusaurus-plugin-content-blog/2023/12-31.md
@@ -2,7 +2,7 @@
 slug: 2023-year-end-summary
 title: '2023 年末问自己的 40 个问题'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 2023 年末总结，透过对自己提问，反思自己的成长概况。
