--- a/i18n/zh-cn/docusaurus-plugin-content-blog/2024/08-11.md
+++ b/i18n/zh-cn/docusaurus-plugin-content-blog/2024/08-11.md
@@ -2,7 +2,7 @@
 slug: mid-year-reflection-2024
 title: '2024 年中反思'
 authors: wuzhe0912
-tags: [Personal Growth]
+tags: [career, life]
 ---
 
 时间流逝的速度真的超乎想象，转瞬间 2024 又过了一半，但个人感觉自律程度没有改善，有达成的事项乏善可陈，但还是略作书陈。
