--- a/i18n/zh-tw/docusaurus-plugin-content-blog/2023/07-22.md
+++ b/i18n/zh-tw/docusaurus-plugin-content-blog/2023/07-22.md
@@ -2,7 +2,7 @@
 slug: hex-school-node
 title: 'HexSchool Node.js 企業專班'
 authors: wuzhe0912
-tags: [Node.js]
+tags: [engineering]
 ---
 
 完成 HexSchool Node.js 企業專班後，一些粗淺的想法與反思。
