--- a/i18n/zh-tw/docusaurus-plugin-content-blog/2024/08-11.md
+++ b/i18n/zh-tw/docusaurus-plugin-content-blog/2024/08-11.md
@@ -2,7 +2,7 @@
 slug: mid-year-reflection-2024
 title: '2024 年中反思'
 authors: wuzhe0912
-tags: [Personal Growth]
+tags: [career, life]
 ---
 
 時間流逝的速度真的超乎想像，轉瞬間 2024 又過了一半，但個人感覺自律程度沒有改善，有達成的事項乏善可談，但還是略作書陳。
