--- a/i18n/zh-tw/docusaurus-plugin-content-blog/2024/12-31.md
+++ b/i18n/zh-tw/docusaurus-plugin-content-blog/2024/12-31.md
@@ -2,7 +2,7 @@
 slug: 2024-year-end-summary
 title: '2024 年末問自己的 40 個問題'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 2024 年末總結，延續去年的格式，再次透過對自己提問，反思這一年的成長概況。
