--- a/i18n/zh-tw/docusaurus-plugin-content-blog/2023/12-31.md
+++ b/i18n/zh-tw/docusaurus-plugin-content-blog/2023/12-31.md
@@ -2,7 +2,7 @@
 slug: 2023-year-end-summary
 title: '2023 年末問自己的 40 個問題'
 authors: wuzhe0912
-tags: [40-Questions, Personal Growth, Year-End Summary]
+tags: [year-review, life]
 ---
 
 2023 年末總結，透過對自己提問，反思自己的成長概況。
