--- a/i18n/fr/docusaurus-theme-classic/footer.json
+++ b/i18n/fr/docusaurus-theme-classic/footer.json
@@ -1,6 +1,6 @@
 {
   "link.title.Community": {
-    "message": "Community",
+    "message": "Communauté",
     "description": "The title of the footer links column with title=Community in the footer"
   },
   "link.item.label.GitHub": {
@@ -14,9 +14,5 @@
   "link.item.label.CakeResume": {
     "message": "CakeResume",
     "description": "The label of footer link with label=CakeResume linking to https://www.cakeresume.com/me/pittwu"
-  },
-  "copyright": {
-    "message": "Copyright © 2026 Pitt Wu Built with Docusaurus.",
-    "description": "The footer copyright"
   }
 }
